spacing on large size corrected

--- a/wp-content/themes/aerospace/assets/_scss/abstracts/_variables.scss
+++ b/wp-content/themes/aerospace/assets/_scss/abstracts/_variables.scss
@@ -132,7 +132,6 @@ $archive-content-margin-featured-left-md: 0.75rem;
 $archive-content-margin-featured-right-lg: 1.25rem;
 $archive-content-margin-featured-left-lg: 1.25rem;
 $archive-content-padding-featured-top-md: 1.5rem;
-$archive-content-padding-featured-top-lg: 2.5rem;
 $archive-content-padding-featured-bottom-md: 4rem;
 
 $size__longform-margin-sm: 2rem;
